# CoreMat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  func.cmake  img_gray.ppm  img_rgb.ppm
.zed/: settings.json  tasks.json
backup/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  benchmark_image.cpp
googletest/: CMakeLists.txt  googletest_image.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  main.cpp
src/image/: CMakeLists.txt  image.cpp  image.hpp  image_io.cpp  image_io.hpp
